# abstract-data-app

./: README.md  example.py  pyproject.toml
abstract_data_app/: __init__.py  app.py  backend.py  config.py  operations.py
abstract_data_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
abstract_data_app/backends/: __init__.py  postgres.py  sqlite.py
tests/: conftest.py  test_journey_1_crud_list_delete.py  test_journey_2_operation_side_effects.py  test_journey_3_recursive_schema_jq_filters.py  test_journey_4_mcp_spec.py  test_journey_5_cancelable_operations.py  test_journey_6_programmatic_api.py  test_journey_7_on_write_callbacks.py
