[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "abstract-data-app"
version = "0.1.0"
description = "Library for building HTTP CRUD + MCP server apps from Python dataclasses and operations"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "jq>=1.6",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
redis = ["redis>=5.0"]
all = ["psycopg2-binary>=2.9", "redis>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["abstract_data_app*"]
